homework/8.ci-cd/kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gb-conteinerization
spec:
  progressDeadlineSeconds: 300
  replicas: 2
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: nginx:1.12 # это просто плэйсхолдер
          resources:
            limits:
              memory: "128Mi"
              cpu: "100m"
          ports:
            - containerPort: 8000
